Excluindo arquivos que não vão ser utilizados

--- a/notebooks/logistic-reg-model.ipynb
+++ b/notebooks/logistic-reg-model.ipynb
@@ -62,7 +62,8 @@
    "source": [
     "X = np.array(sentences + sentencas)\n",
     "Y = np.array(['Y']*len(sentences) + ['N']*len(sentencas))\n",
-    "df = pd.DataFrame({'sentence':X,'mashing':Y})"
+    "df = pd.DataFrame({'sentence':X,'mashing':Y})\n",
+    "df.to_csv(\"C:/Users/arthu/Desktop/MDS/2022-2-Squad03/data/processed/dataframe.csv\")"
    ]
   },
   {
@@ -131,7 +132,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix,classification_report, accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "\n",
     "Y_pred = model.predict(vectorizer.transform(X_test))\n",
     "\n",
