Adição comentário base dados
Adição de um comentário sobre como abrir as bases de dados.

--- a/notebooks/isitkstest.ipynb
+++ b/notebooks/isitkstest.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "## Lendo e filtrando os dados:\n",
-    "\n",
+    "##OBS.: Troque o caminho de abrir os arquivos pelo caminho que eles estão no seu PC\n",
     "txt = \"\"\n",
     "with open(\"C:\\\\Users\\\\dougl\\\\Documents\\\\UNB\\MDS\\\\2022-2-Squad03\\\\data\\\\raw\\\\mashing.txt\", \"r\", encoding=\"utf-8\") as g:\n",
     "    txt = g.read()\n",
