--- a/notebooks/isitkstest.ipynb
+++ b/notebooks/isitkstest.ipynb
@@ -17,7 +17,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.feature_extraction.text import CountVectorizer, HashingVectorizer\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
-    "from nltk.util import ngrams\n",
+    "from nltk.util import ngrams, everygrams\n",
     "import nltk, re, string, collections\n",
     "from sklearn.ensemble import ExtraTreesClassifier, RandomForestClassifier\n",
     "from sklearn.metrics import balanced_accuracy_score, f1_score, recall_score"
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Lendo e filtrando os dados:\n",
     "##OBS.: Troque o caminho de abrir os arquivos pelo caminho que eles estão no seu PC\n",
     "txt = \"\"\n",
-    "with open(\"C:\\\\Users\\\\dougl\\\\Documents\\\\UNB\\MDS\\\\2022-2-Squad03\\\\data\\\\raw\\\\mashing.txt\", \"r\", encoding=\"utf-8\") as g:\n",
+    "with open(\"..\\\\data\\\\raw\\\\mashing.txt\", \"r\", encoding=\"utf-8\") as g:\n",
     "    txt = g.read()\n",
     "\n",
     "mashings = txt.split(\"\\n\")\n",
@@ -41,7 +41,7 @@
     "    mashings[i] = mashings[i].strip()\n",
     "\n",
     "texto = \"\"\n",
-    "with open(\"C:\\\\Users\\\\dougl\\\\Documents\\\\UNB\\MDS\\\\2022-2-Squad03\\\\data\\\\raw\\\\large-2014.txt\", \"r\", encoding=\"utf-8\") as k:\n",
+    "with open(\"..\\\\data\\\\raw\\\\large-2014.txt\", \"r\", encoding=\"utf-8\") as k:\n",
     "    texto = k.read()\n",
     "\n",
     "naturals = texto.split(\" \")\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Treinando o modelo (Diferentes modelos estão comentados, para testar só descomentar um e comentar os outros):\n",
     "\n",
@@ -156,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc: 0.8790793714746172\n",
+      "Acc: 0.8789666248665846\n",
+      "Acc: 0.8840040581670611\n",
+      "Acc: 0.9189433507432704\n"
+     ]
+    }
+   ],
    "source": [
     "#Diferentes métricas para avalização da eficácia do modelo com a base de dados usada pra teste\n",
     "\n",
@@ -182,9 +204,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['th', 'thi', 'this', 'hi', 'his', 'his ', 'is', 'is ', 'is i', 's ', 's i', 's is', ' i', ' is', ' is ', 'is', 'is ', 'is a', 's ', 's a', 's an', ' a', ' an', ' an ', 'an', 'an ', 'an t', 'n ', 'n t', 'n te', ' t', ' te', ' tes', 'te', 'tes', 'test', 'es', 'est', 'st'] \n",
+      " [0 0 0 0 0 1 0 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 0 0 0 0\n",
+      " 0 0] \n",
+      " [0.03151845 0.03950038 0.04010871 0.17493677 0.03287999 0.99\n",
+      " 0.07979065 1.         1.         1.         1.         1.\n",
+      " 1.         1.         1.         0.07979065 1.         1.\n",
+      " 1.         1.         1.         1.         1.         1.\n",
+      " 0.06192344 1.         1.         1.         1.         1.\n",
+      " 1.         1.         1.         0.09668753 0.01544027 0.01544027\n",
+      " 0.05766206 0.01544027 0.10127127]\n",
+      "1\n",
+      "66.237%\n"
+     ]
+    }
+   ],
    "source": [
     "# Input para o algoritmo advinhar se é ks ou não:\n",
     "input_data = [(input(\"\"))]\n",
@@ -204,7 +245,72 @@
     "prob = sum(predprob)/len(input_ngrams) * 100\n",
     "\n",
     "#Esse print comentado mostra todos os ngramas formados da palavra e a probabilidade de ks de cada um deles\n",
-    "# print(input_ngrams,'\\n',pred,'\\n', prob)\n",
+    "print(input_ngrams,'\\n',pred,'\\n', predprob)\n",
+    "\n",
+    "# Se a probabilidade for maior que 50% a palavra é considera ks e a probabilidade é mostrada\n",
+    "if (prob >= 50):\n",
+    "    print (1)\n",
+    "    print(f\"{prob:.3f}%\")\n",
+    "else:\n",
+    "    print (0)\n",
+    "    print(f\"{prob:.3f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['th', 'thi', 'this', 'hi', 'his', 'is', 'is', 'an', 'ak', 'akj', 'akjd', 'kj', 'kjd', 'kjdh', 'jd', 'jdh', 'jdha', 'dh', 'dha', 'dhas', 'ha', 'has', 'hask', 'as', 'ask', 'askh', 'sk', 'skh', 'skhf', 'kh', 'khf', 'khfg', 'hf', 'hfg', 'hfga', 'fg', 'fga', 'fgas', 'ga', 'gas', 'gasj', 'as', 'asj', 'asjh', 'sj', 'sjh', 'sjhf', 'jh', 'jhf', 'hf'] \n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 1 1 0 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 0 1 1 1 1 1 1 1 1 1 1 1] \n",
+      " [0.03151845 0.03950038 0.04010871 0.17493677 0.03287999 0.07979065\n",
+      " 0.07979065 0.06192344 0.73751172 1.         1.         1.\n",
+      " 1.         1.         1.         1.         0.988      0.95362191\n",
+      " 0.18848877 0.         0.14189408 0.10998557 0.30628157 0.54569239\n",
+      " 0.96883357 0.30628157 0.71697316 1.         1.         1.\n",
+      " 1.         1.         1.         1.         0.95681818 1.\n",
+      " 1.         0.83339259 0.25639553 0.69759913 1.         0.54569239\n",
+      " 1.         1.         1.         1.         1.         1.\n",
+      " 1.         1.        ]\n",
+      "1\n",
+      "69.588%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Input para o algoritmo advinhar se é ks ou não:\n",
+    "input_data = (input(\"\"))\n",
+    "\n",
+    "\n",
+    "words = [input_data.split()]\n",
+    "\n",
+    "# Processo de extração dos ngramas e tokenização do input\n",
+    "input_ngrams = []\n",
+    "for word in words:\n",
+    "    for char in word:\n",
+    "        ngram = map(''.join,list(everygrams(char, 2, 4)))\n",
+    "        input_ngrams.extend(ngram)\n",
+    "\n",
+    "#Entrega das features ao modelo para ele adivinhar qual a classe se encaixaria melhor (1 = mashing)\n",
+    "#Para cada ngrama da palavra o algoritmo vai emitir uma classificação, uma mesma palavra pode ter ngramas de keyboard smashing e de palavras \"normais\"\n",
+    "pred = model.predict(vectorizer.transform(input_ngrams))\n",
+    "\n",
+    "#É calculada a média da chance de ser keyboard smashing de todos os ngramas da palavra\n",
+    "predprob = model.predict_proba(vectorizer.transform(input_ngrams))[:,1]\n",
+    "# prob = sum(predprob)/len(input_ngrams) * 100\n",
+    "\n",
+    "#Esse print comentado mostra todos os ngramas formados da palavra e a probabilidade de ks de cada um deles\n",
+    "print(input_ngrams,'\\n',pred,'\\n', predprob)\n",
+    "\n",
+    "for p in predprob:\n",
+    "    if (p > 0.7):\n",
+    "        p *= 2\n",
+    "prob = sum(predprob)/len(input_ngrams) * 100\n",
     "\n",
     "# Se a probabilidade for maior que 50% a palavra é considera ks e a probabilidade é mostrada\n",
     "if (prob >= 50):\n",
