Script para limpeza das bases de dados mash e nat

--- a/notebooks/isitkstest.ipynb
+++ b/notebooks/isitkstest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,26 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Lendo e filtrando os dados:\n",
     "##OBS.: Troque o caminho de abrir os arquivos pelo caminho que eles estão no seu PC\n",
-    "txt = \"\"\n",
-    "with open(\"..\\\\data\\\\raw\\\\mashing.txt\", \"r\", encoding=\"utf-8\") as g:\n",
-    "    txt = g.read()\n",
     "\n",
-    "mashings = txt.split(\"\\n\")\n",
+    "with open(\"..\\\\data\\\\raw\\\\mashing.txt\", \"r\", encoding=\"utf-8\") as g:\n",
+    "    mashings = g.read()\n",
+    "\n",
+    "mashings = mashings.split(\"\\n\")\n",
     "\n",
     "for i in range(len(mashings)):\n",
     "    mashings[i] = mashings[i].strip()\n",
     "\n",
-    "texto = \"\"\n",
-    "with open(\"..\\\\data\\\\raw\\\\large-2014.txt\", \"r\", encoding=\"utf-8\") as k:\n",
-    "    texto = k.read()\n",
     "\n",
-    "naturals = texto.split(\" \")\n",
+    "with open(\"..\\\\data\\\\raw\\\\large-2014.txt\", \"r\", encoding=\"utf-8\") as k:\n",
+    "    naturals = k.read()\n",
+    "\n",
+    "naturals = naturals.split(\" \")\n",
     "\n",
     "for i in range(len(naturals)):\n",
     "    naturals[i] = naturals[i].strip()\n",
