Protótipo função replace_kbs
Foi criado um protótipo funcional da função replace_kbs no notebook test_replace_kbs, para mais detalhes verificar o código.

--- a/notebooks/test_kbs_replace.ipynb
+++ b/notebooks/test_kbs_replace.ipynb
@@ -2,34 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import os\n",
     "from nltk import everygrams\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from isitkbs import is_kbs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# modelpath = os.path.join(os.path.dirname(os.path.dirname(__file__)), 'models/randomforest.pkl')\n",
-    "# vectpath = os.path.join(os.path.dirname(os.path.dirname(__file__)), 'models/tfid_vectorizer.pkl')\n",
-    "modelpath = '../models/randomforest.pkl'\n",
-    "vectpath = '../models/tfid_vectorizer.pkl'\n",
-    "\n",
-    "trained_model = pickle.load(open(modelpath, 'rb'))\n",
-    "vectorizer = pickle.load(open(vectpath, 'rb'))"
+    "def replace_kbs(\n",
+    "    dataframe,\n",
+    "    value,\n",
+    "    inplace=False):\n",
+    "    \"\"\" \n",
+    "    Parâmetros:\n",
+    "    dataframe: dataframe pandas do qual os keyboard smashing vão ser substituidos.\n",
+    "    value: string que vai substituir os keyboard smashings, caso seja uma string vazia as linhas que apresentarem kbs serão removidas do dataframe\n",
+    "    inplace: se as substituições serão feitas no próprio dataframe dos parâmetros (True) ou será retornada uma cópia do df (False)\n",
+    "    \"\"\"\n",
+    "    if inplace == False:\n",
+    "        df = dataframe.copy()\n",
+    "    else:\n",
+    "        df = dataframe.copy(deep=False)\n",
+    "    if value == \"\":\n",
+    "        value = \"itiskbs\"\n",
+    "    columns = df.columns.values.tolist()\n",
+    "    for i in range(len(columns)):\n",
+    "        for row in df.index:\n",
+    "                if is_kbs(df.iat[row, i], 'word', 'randomForest'):\n",
+    "                    df.iat[row, i] = value\n",
+    "    for i in range(len(columns)):\n",
+    "        df = df[df.iloc[:, i] != 'itiskbs']    \n",
+    "    df.reset_index(drop=True, inplace=True)\n",
+    "    if inplace == False:\n",
+    "        return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -53,83 +74,184 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>data</th>\n",
+       "      <th>data2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Douglas</td>\n",
+       "      <td>none</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>test</td>\n",
+       "      <td>name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>oixcjoa</td>\n",
+       "      <td>aklksda</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>thought</td>\n",
+       "      <td>zzzzzz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>interesting</td>\n",
+       "      <td>exception</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>kjadlsjda</td>\n",
+       "      <td>optional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>world</td>\n",
+       "      <td>bottle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>aaaaaaa</td>\n",
+       "      <td>piooijoj</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>vessel</td>\n",
+       "      <td>mnfjisdh</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             0\n",
-       "0      Douglas\n",
-       "1         test\n",
-       "2      oixcjoa\n",
-       "3      thought\n",
-       "4  interesting"
+       "          data      data2\n",
+       "0      Douglas       none\n",
+       "1         test       name\n",
+       "2      oixcjoa    aklksda\n",
+       "3      thought     zzzzzz\n",
+       "4  interesting  exception\n",
+       "5    kjadlsjda   optional\n",
+       "6        world     bottle\n",
+       "7      aaaaaaa   piooijoj\n",
+       "8       vessel   mnfjisdh"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palavras = (\"Douglas\", \"test\", \"oixcjoa\", \"thought\", \"interesting\", \"kjadlsjda\", \"world\", \"aaaaaaa\", \"vessel\")\n",
+    "#Criação de um df para testes da função \n",
+    "\n",
+    "palavras = {\"data\":[\"Douglas\", \"test\", \"oixcjoa\", \"thought\", \"interesting\", \"kjadlsjda\", \"world\", \"aaaaaaa\", \"vessel\"], \"data2\":[\"none\", \"name\", \"aklksda\", \"zzzzzz\",\"exception\", \"optional\", \"bottle\", \"piooijoj\", \"mnfjisdh\"]}\n",
     "df = pd.DataFrame(palavras)\n",
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Douglas</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>test</td>\n",
+       "      <td>name</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>APAGADO</td>\n",
+       "      <td>APAGADO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>thought</td>\n",
+       "      <td>APAGADO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>interesting</td>\n",
+       "      <td>exception</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          data      data2\n",
+       "0      Douglas       none\n",
+       "1         test       name\n",
+       "2      APAGADO    APAGADO\n",
+       "3      thought    APAGADO\n",
+       "4  interesting  exception"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_data = input(\":\")\n",
-    "input_data = [input_data]\n",
-    "input_ngrams = []\n",
+    "df2 = replace_kbs(df, \"APAGADO\")\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Testes de como substituir os valores do dataframe\n",
     "\n",
-    "for i in range(len(input_data)):\n",
-    "    ngram = map(''.join, list(everygrams(input_data[i], 2, 4)))\n",
-    "    input_ngrams.extend(ngram)\n",
-    "\n",
-    "predprob = trained_model.predict_proba(\n",
-    "    vectorizer.transform(input_ngrams))[:, 1]\n",
-    "prob = sum(predprob)/len(input_ngrams)\n",
-    "if (prob >= 0.5):\n",
-    "    print(1)\n",
-    "else:\n",
-    "    print(0)"
+    "replace = \"\"\n",
+    "if replace == \"\":\n",
+    "    replace = \"itiskbs\"\n",
+    "columns = df.columns.values.tolist()\n",
+    "for i in range(len(columns)):\n",
+    "    for row in df.index:\n",
+    "            if is_kbs(df.iat[row, i], 'word', 'randomForest'):\n",
+    "                df.iat[row, i] = replace\n",
+    "for i in range(len(columns)):\n",
+    "    df = df[df.iloc[:, i] != 'itiskbs']    \n",
+    "df.reset_index(drop=True, inplace=True)"
    ]
   }
  ],
